--- a/manuscript_analysis/Case studies/mvgam_case_study1.Rmd
+++ b/manuscript_analysis/Case studies/mvgam_case_study1.Rmd
@@ -187,8 +187,8 @@ listed as dependencies of `mvgam` to ensure that installation is less difficult.
 using `mvgam`, please refer to installation links for `JAGS` [here](https://sourceforge.net/projects/mcmc-jags/files/) or for `Stan` and `rstan` [here](https://mc-stan.org/users/interfaces/rstan)). This model's parameters are estimated in a Bayesian framework using (by default) the Gibbs sampling algorithms available in the `JAGS` software. `mvgam` takes a fitted `gam` model and adapts the model file to fit in `JAGS`, with possible extensions to deal with stochastic trend components and other features.
 ```{r message=FALSE, warning = FALSE}
 m_mvgam <- mvgam(formula = y ~ 1,
-                 data_train = data_train,
-                 data_test = data_test,
+                 data = data_train,
+                 newdata = data_test,
                  family = 'nb',
                  trend_model = 'AR3',
                  chains = 4,
@@ -209,8 +209,8 @@ m_mvgam$model_file
 Users can also view the data and initial values that `mvgam` uses to condition the model by either setting the argument `return_model_data = TRUE` or by setting `run_model = FALSE`. The latter is faster for simply generating the necessary objects and initial value functions. These options will also return the `pregam` structure that is necessary to convert `MCMC` samples into an object that can be readily used by `mgcv` to generate predictions and calculate important quantities such as effective degrees of freedom (see `help(jagam)` for more details)
 ```{r}
 mod_skeleton <- mvgam(y ~ 1,
-                 data_train = data_train,
-                 data_test = data_test,
+                 data = data_train,
+                 newdata = data_test,
                  family = 'nb',
                  trend_model = 'AR3',
                  chains = 4,
@@ -224,12 +224,11 @@ head(mod_skeleton$pregam)
 The same steps above can be used to generate `Stan` data and modelling files, with all options available apart from the use of a Tweedie-Poisson distribution:
 ```{r}
 mod_skeleton <- mvgam(y ~ 1,
-                 data_train = data_train,
-                 data_test = data_test,
+                 data = data_train,
+                 newdata = data_test,
                  family = 'nb',
                  trend_model = 'AR3',
                  chains = 4,
-                 burnin = 1000,
                  use_stan = TRUE,
                  run_model = FALSE)
 str(mod_skeleton$model_data)
@@ -373,12 +372,12 @@ layout(matrix(1:2, ncol = 1, nrow = 2))
 plot(trend[4:53], xlim = c(0, 50), bty = 'L', type = 'l', lwd = 2, col = 'grey',
      ylab = 'True trend')
 box(bty = 'L', lwd = 2)
-plot(m_mvgam, 'trend', data_test = data_test)
+plot(m_mvgam, 'trend', newdata = data_test)
 layout(1)
 ```
 
 ```{r, fig.width = 6, fig.height = 5, fig.align='center'}
-plot(m_mvgam, 'forecast', data_test = data_test)
+plot(m_mvgam, 'forecast', newdata = data_test)
 ```
 
 We can get a better idea of what is happening for the autoregressive observation model by plotting posterior realisations on the log scale. Here each line is a realisation, and we show these lines as a spaghetti plot to make it easier to visualise the diversity of possible forecast paths that are compatible with our model configuration.
@@ -411,7 +410,7 @@ layout(matrix(1:2, ncol = 1, nrow = 2))
 plot(trend[4:53], xlim = c(0, 50), type = 'l', lwd = 2, col = 'grey',
      ylab = 'True trend', bty = 'L')
 box(bty = 'L', lwd = 2)
-plot(m_mvgam, 'trend', data_test = data_test, realisations = TRUE,
+plot(m_mvgam, 'trend', newdata = data_test, realisations = TRUE,
      n_realisations = 10)
 layout(1)
 ```
@@ -580,8 +579,8 @@ for(i in 1:1000){
 Now fit an `mvgam` model where the latent trend is modelled as an `AR3` process. We will use `Stan` for this example, which generally explores the joint posterior much more efficiently (and more fully) than `JAGS`
 ```{r, message=FALSE, warning=FALSE}
 m_mvgam <- mvgam(y ~ s(p_whiting, k = 5),
-                 data_train = data_train,
-                 data_test = data_test,
+                 data = data_train,
+                 newdata = data_test,
                  family = 'nb',
                  trend_model = 'AR3',
                  use_stan = TRUE,
@@ -716,41 +715,40 @@ plot_fc_horizon(gam_sims = MCMCvis::MCMCchains(m_mvgam$model_output,
 
 The dynamic GAM is difficult to beat for this example. But what other utilities does the `mvgam` package make available? We can also re-do the posterior predictive checks, but this time focusing only on the out of sample period. This will give us better insight into how the model is performing and whether it is able to simulate realistic and unbiased future values
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-ppc(m_mvgam, series = 1, type = 'hist', data_test = data_test,
+ppc(m_mvgam, series = 1, type = 'hist', newdata = data_test,
                legend_position = 'topright', n_bins = 200)
 ```
 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-ppc(m_mvgam, series = 1, type = 'mean', data_test = data_test)
+ppc(m_mvgam, series = 1, type = 'mean', newdata = data_test)
 ```
 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-ppc(m_mvgam, series = 1, type = 'cdf', data_test = data_test)
+ppc(m_mvgam, series = 1, type = 'cdf', newdata = data_test)
 ```
 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-ppc(m_mvgam, series = 1, type = 'pit', data_test = data_test)
+ppc(m_mvgam, series = 1, type = 'pit', newdata = data_test)
 ```
 
 There are some problems with the way this model is generating future predictions, so we would need to perform a more rigorous and principled model development strategy to improve our model's predictive abilities. But there are two other utilities available in `mvgam` that are worth highlighting. The first is model comparison. Benchmarking against "null" models is a very important part of evaluating a proposed forecast model. After all, if our complex dynamic model can't generate better predictions then a random walk or mean forecast, is it really telling us anything new about the data-generating process? Here we examine the model comparison utilities in `mvgam`. Here we illustrate how this can be done in `mvgam` by fitting a basic random walk model with a Negative Binomial observation process. No smooth terms are included here, the observation model simply has an intercept term.
 ```{r, message=FALSE, warning=FALSE}
 m_mvgam2 <- mvgam(y ~ 1,
-                 data_train = data_train,
-                 data_test = data_test,
+                 data = data_train,
+                 newdata = data_test,
                  family = 'nb',
                  trend_model = 'RW',
                  use_stan = TRUE,
-                 chains = 4,
-                 burnin = 500)
+                 chains = 4)
 ```
 
 Look at this model's proposed forecast, which incidentally isn't too bad compared to the original `AR3` model
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot(m_mvgam2, series = 1, type = 'forecast', data_test = data_test)
+plot(m_mvgam2, series = 1, type = 'forecast', newdata = data_test)
 ```
 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot(m_mvgam, series = 1, type = 'forecast', data_test = data_test)
+plot(m_mvgam, series = 1, type = 'forecast', newdata = data_test)
 ```
 
 Now we will showcase how different dynamic models can be compared using rolling probabilistic forecast evaluation, which is especially useful if we don't already have out of sample observations for comparing forecasts. This function sets up a sequence of evaluation timepoints along a rolling window within the training data to evaluate 'out-of-sample' forecasts. The trends are rolled forward a total of `fc_horizon` timesteps according to their estimated state space dynamics to generate an 'out-of-sample' forecast that is evaluated against the true observations in the `horizon` window. We are therefore simulating a situation where the model's parameters had already been estimated but we have only observed data up to the evaluation timepoint and would like to generate forecasts that consider the possible future paths for the latent trends and the true observed values for any other covariates in the `horizon` window. Evaluation involves calculating the Discrete Rank Probability Score and a binary indicator for whether or not the true value lies within the forecast's 90% prediction interval. For this test we compare the two models on the exact same sequence of `30` evaluation points using `horizon = 6`
@@ -774,7 +772,7 @@ pfilter_mvgam_online(data_assim = model_dat[29:30, ], n_cores = 3,
 Once assimilation is complete, generate the updated forecast from the particles using the covariate information in remaining `data_test` observations. This function is designed to hopefully make it simpler to assimilate observations, as all that needs to be provided once the particles are initiated as a dataframe of test data in exactly the same format as the data that were used to train the initial model. If no new observations are found (observations are arranged by `time` so the consistent indexing of these two variables is very important!) then the function returns a `NULL` and the particles remain where they are in state space.
 ```{r}
 pfilter_fc <- pfilter_mvgam_fc(file_path = "pfilter",
-                       n_cores = 3, data_test = model_dat[31:36,],
+                       n_cores = 3, newdata = model_dat[31:36,],
                        return_forecasts = TRUE,
                        ylim = c(0, 5100))
 ```
@@ -1033,14 +1031,13 @@ lynx_mgcv2_drps <- drps_mcmc_object(truth = lynx_test$population[1:10],
                    
 This forecast is highly overconfident, with very unrealistic uncertainty intervals due to the interpolation behaviours of the lag smooths. You can certainly keep trying different formulations (our experience is that the B spline variant above produces the best forecasts from any tested `mgcv` model, but we did not test an exhaustive set), but hopefully it is clear that forecasting using splines is tricky business and it is likely that each time you do it you'll end up honing in on different combinations of penalties, knot selections etc.... Now we will fit an `mvgam` model for comparison. This model fits a similar model to the `mgcv` model directly above but with a full time series model for the errors (in this case an `AR1` process), rather than smoothing splines that do not incorporate a concept of the future. We do not use a `year` term to reduce any possible extrapolation and because the latent dynamic component should capture this temporal variation.
 ```{r, message=FALSE, warning=FALSE}
-lynx_mvgam <- mvgam(data_train = lynx_train,
-               data_test = lynx_test,
+lynx_mvgam <- mvgam(data = lynx_train,
+               newdata = lynx_test,
                formula = y ~ s(season, bs = 'cc', k = 19),
                knots = list(season = c(0.5, 19.5)),
                family = 'poisson',
                trend_model = 'AR1',
                use_stan = TRUE,
-               burnin = 1000,
                chains = 4)
 ```
 
@@ -1105,17 +1102,17 @@ plot_mvgam_smooth(lynx_mvgam, 1, 'season')
 
 We can also view the mvgam's posterior predictions for the entire series (testing and training)
 ```{r, fig.width=5, fig.height=4, fig.align='center'}
-plot(lynx_mvgam, type = 'forecast', data_test = lynx_test)
+plot(lynx_mvgam, type = 'forecast', newdata = lynx_test)
 ```
 
 And the estimated trend
 ```{r, fig.width=5, fig.height=4, fig.align='center'}
-plot(lynx_mvgam, type = 'trend', data_test = lynx_test)
+plot(lynx_mvgam, type = 'trend', newdata = lynx_test)
 ```
 
 A key aspect of ecological forecasting is to understand [how different components of a model contribute to forecast uncertainty](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/eap.1589). We can estimate contributions to forecast uncertainty for the GAM smooth functions and the latent trend using `mvgam`
 ```{r, fig.width=5, fig.height=4, fig.align='center'}
-plot(lynx_mvgam, type = 'uncertainty', data_test = lynx_test)
+plot(lynx_mvgam, type = 'uncertainty', newdata = lynx_test)
 ```
 
 Both components contribute to forecast uncertainty, with the trend component contributing more over time (as it should since this is the stochastic forecast component). This suggests we would still need some more work to learn about factors driving the dynamics of the system. But we will leave the model as-is for this example. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's Dunn-Smyth randomised quantile residuals. Again we have more options for plotting when using the `plot_mvgam_resids()` function compared to the `S3` generic `plot.mvgam()`. Here we use this flexibility to modify the number of bins for the residuals vs fitted plot (top-left) so that the patterns are more clear. We are primarily looking for a lack of autocorrelation, which would suggest our AR1 model is appropriate for the latent trend
@@ -1125,5 +1122,5 @@ plot_mvgam_resids(lynx_mvgam, n_bins = 25)
 
 This same plot can also be produced for out of sample residuals if a set of test data is supplied (note that the function will assume that the test data come immediately sequential to the training data, there are no formal checks of this so it is up to the user to ensure this holds)
 ```{r, fig.width=6, fig.height=6, fig.align='center'}
-plot_mvgam_resids(lynx_mvgam, n_bins = 25, data_test = lynx_test)
+plot_mvgam_resids(lynx_mvgam, n_bins = 25, newdata = lynx_test)
 ```
